--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,12 +174,18 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Delius+Unicase:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+.headline {
+  font-family: "Delius Unicase", cursive !important;
+}
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
 
   body {
+    font-family: "Quicksand", sans-serif !important;
     @apply bg-background text-foreground;
   }
 }
